--- a/src/utils/i18n/en.json
+++ b/src/utils/i18n/en.json
@@ -1,31 +1,35 @@
 {
-    "home": "Home",
-    "projectList": "Project list",
-    "create": "Create",
-    "overview": "Overview",
-    "newProject": "New project",
-    "projectNumber": "Project number",
-    "projectName": "Project name",
-    "customer": "Customer",
-    "group": "Group",
-    "members": "Members",
-    "status": "Status",
-    "startDate": "Start date",
-    "endDate": "End date",
-    "cancel": "Cancel",
-    "number": "Number",
-    "name": "Name",
-    "projects": "Projects",
-    "groups": "Groups",
-    "options": "Options",
-    "recentProjects": "Recent projects",
-    "statusCode": "Status code",
-    "statusName": "Status name",
-    "numberOfProjects": "Number of projects",
-    "noAvailableData": "No available data",
-    "theme": "Theme",
-    "language": "Language",
-    "dark": "Dark",
-    "light": "Light",
-    "system": "System"
+  "home": "Home",
+  "projectList": "Project list",
+  "create": "Create",
+  "overview": "Overview",
+  "newProject": "New project",
+  "projectNumber": "Project number",
+  "projectName": "Project name",
+  "customer": "Customer",
+  "group": "Group",
+  "members": "Members",
+  "status": "Status",
+  "startDate": "Start date",
+  "endDate": "End date",
+  "cancel": "Cancel",
+  "number": "Number",
+  "name": "Name",
+  "projects": "Projects",
+  "groups": "Groups",
+  "options": "Options",
+  "recentProjects": "Recent projects",
+  "statusCode": "Status code",
+  "statusName": "Status name",
+  "numberOfProjects": "Number of projects",
+  "noAvailableData": "No available data",
+  "theme": "Theme",
+  "language": "Language",
+  "dark": "Dark",
+  "light": "Light",
+  "system": "System",
+  "errorInput": "Error inputation",
+  "pleaseInput": "Please input all required fields",
+  "success": "Success",
+  "addProjectSuccess": "Project was added successfully"
 }
