done create and home

--- a/src/utils/i18n/en.json
+++ b/src/utils/i18n/en.json
@@ -31,5 +31,6 @@
   "errorInput": "Error inputation",
   "pleaseInput": "Please input all required fields",
   "success": "Success",
-  "addProjectSuccess": "Project was added successfully"
+  "addProjectSuccess": "Project was added successfully",
+  "mandatory": "Mandatory"
 }
