--- a/src/utils/i18n/fr.json
+++ b/src/utils/i18n/fr.json
@@ -27,5 +27,30 @@
   "language": "Langue",
   "dark": "Noir",
   "light": "Lumière",
-  "system": "Système"
+  "system": "Système",
+  "errorInput": "Entrée des erreurs",
+  "pleaseInput": "Veuillez saisir tous les champs obligatoires",
+  "success": "Succès",
+  "addProjectSuccess": "Le projet a été ajouté avec succès",
+  "mandatory": "Obligatoire",
+  "fail": "Échec",
+  "baseSearchInfo": "Numéro, nom et nom du client du projet",
+  "projectStatus": "Statut du projet",
+  "searchProject": "Projet de recherche",
+  "resetSearch": "Réinitialiser la recherche",
+  "useAdvanced": "Utilisez des outils avancés",
+  "selectRange": "Sélectionnez une gamme",
+  "containMember": "Contenir le membre",
+  "enterVisa": "Entrer le visa",
+  "relatedName": "Nom connexe",
+  "delete": "Effacer",
+  "itemSelected": "Article sélectionné",
+  "itemsSelected": "Articles sélectionnés",
+  "deleteSelectedItem": "Effacer l'élément sélectionné",
+  "deleteSelectedItems": "Effacer les éléments sélectionnés",
+  "confirmation": "Confirmation",
+  "confirmMsg": "Vous êtes sûr de vouloir supprimer",
+  "editProject": "Modifier le projet",
+  "edit": "Modifier",
+  "itemsPerPage": "Articles par page"
 }
